Fix bugs and apply restyle on following/follower pages

--- a/feedback/templates/feedback/success.html
+++ b/feedback/templates/feedback/success.html
@@ -10,5 +10,8 @@
                 <p class="flow-text">Hemos enviado una copia del mensaje a tu correo electrónico.</p>
             </div>
         </div>
+        <div class="row">
+            {{ object }} {{ success }}
+        </div>
     </div>
 {% endblock %}
