--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -12,7 +12,7 @@ Base para el head de la pagina (menu horizontal con busqueda etc...)
                     class="material-icons">menu</i></a>
             {% include "account/menu-horizontal.html" %}
             <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i class="material-icons">notifications</i><span
-                    id="live_notify_badge">{{ total_notifications }}</span></a>
+                    id="live_notify_badge"><b>{{ total_notifications }}</b></span></a>
             <div class="right field hide-on-med-and-down" id="searchform">
                 <form class="autocomplete-me" method='get' action="{% url 'user_profile:general-search' %}">
                     {{ searchForm }}
