--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -5,62 +5,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
 {% load avatar_tags %}
 {% load humanize %}
 {% load static %}
-<style>
-    .profile-controls, .profile-items, .profile-info {
-        padding: 5px;
-    }
 
-    .profile-controls > li {
-        display: inline;
-        margin: 10px;
-        -webkit-transition: all .2s ease-in-out;
-        transition: all .2s ease-in-out;
-    }
-
-    .profile-controls .configure-profile:hover {
-        color: grey;    
-    }
-
-    .profile-controls .write-profile:hover {
-        color: #1e88e5;    
-    }
-
-    .profile-controls .info-groups:hover, .group-profile:hover {
-        color: #4caf50;    
-    }
-
-    .profile-controls .info-trof:hover {
-        color: #ffc107;    
-    }
-
-    .profile-controls .my-content:hover {
-        color: #f44336;    
-    }
-
-    .profile-controls .info-workspaces:hover {
-        color: #90caf9;    
-    }
-
-    .profile-controls .follow-profile:hover {
-        color: #81c784;    
-    }
-
-    .profile-controls .like-profile:hover {
-        color: rgb(236, 64, 122);    
-    }
-    
-    .profile-items > li {
-        margin-top: 5px;
-        margin-bottom: 5px;
-        font-size: 1.2em;
-    }
-    .profile-items > li > a {
-        color: #424242;
-    }
-    .user-stats .user-pic-wrapper {
-        margin: 5px;
-    }
-</style>
 <div class="row z-depth-1-half">
     <div class="col s12">
         <div class="user-card card">
@@ -128,7 +73,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                             <ul class="profile-controls">
                                     {% if user.username == user_profile.username %}
                                     <!-- Si el usuario esta visitando su propio perfil -->
-                                    <li id="configurationOnProfile" class="material-icons configure-profile" title="Configuracion">settings</li>
+                                    <li id="configurationOnProfile" title="Configuracion"><i class="material-icons configure-profile">settings</i></li>
                                     {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
                                     {% if isFriend == True %}
                                     <li id="addfriend" class="material-icons unfollow-profile" title="Dejar de seguir"
