--- a/invitations/templates/invitations/email/email_invite_subject.html
+++ b/invitations/templates/invitations/email/email_invite_subject.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 {% block content %}
     {% autoescape off %}
-        {% blocktrans %}Invitation to join {{ site_name }}{% endblocktrans %}
+        {% blocktrans %}Has recibido una invitación para la beta de {{ site_name }}{% endblocktrans %}
     {% endautoescape %}
 {% endblock %}
