Update wallpaper and logo

--- a/dash/contrib/plugins/service/templates/service/render.html
+++ b/dash/contrib/plugins/service/templates/service/render.html
@@ -19,7 +19,7 @@
 <script>
 $(document).ready(function() {
     $.get("http://0.0.0.0:8000/dashboard/pin/service/" + {{ id }}, function(data, status){
-        $('#api-results').replaceWith(data);
+        $('#api-results').replaceWith(data.content);
     });
 });
 </script>
