--- a/dash/contrib/plugins/service/templates/service/service_result.html
+++ b/dash/contrib/plugins/service/templates/service/service_result.html
@@ -1,3 +1,5 @@
 <div class="service-result">
-    <p>{{ twitter_id }}</p>
+    {% for result in results %}
+        <p>{{ result.text }}</p>
+    {% endfor %}
 </div>
