--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -89,22 +89,17 @@ main
     text-shadow: 1px 1px 1px $blueskyfolk
 
 .logo
-  position: relative
-  margin: auto
   cursor: pointer
   & img
-    width: 100px
-    height: 100px
-    position: absolute
-    top: 12px
-    left: 0
+    width: 300x
+    height: 300px
+    position: relative
 
 #login
   width: 370px
   margin: auto
   position: relative
   display: block
-  margin-top: 99px
   border-radius: 7px
   font-family: 'Open Sans', sans-serif
   z-index: 9999
