--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -64,9 +64,8 @@
     </div>
 </nav>
 <div class="row">
-    <div class="hide-on-med-and-down namesn">
+    <div class="hide-on-med-and-down">
         <div onclick="javascript:location.href='/'" class="logo">
-            <h5><i>S</i>kyfolk.</h5>
             <img src="{% static "dist/img/logo.png" %}">
         </div>
     </div>
