Twitter service is ready

--- a/dash/templates/dash/edit_dashboard_widget_ajax.html
+++ b/dash/templates/dash/edit_dashboard_widget_ajax.html
@@ -1,40 +1,56 @@
 {% load i18n %}
 <div class="container">
-<div class="row">
-    <div class="col l4 s12 offset-l4">
-        <div class="wrapper-bg"></div>
+    <div class="row">
+        <div class="col l4 s12 offset-l4">
+            <div class="wrapper-bg"></div>
             <div class="hero-unit-small center">
-                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Edit {{ plugin_name }} on Dashboard{% endblocktrans %}</h2>
+                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Edit {{ plugin_name }} on
+                    Dashboard{% endblocktrans %}</h2>
             </div>
-    </div>
+        </div>
         <div class="col l4 s12 offset-l4">
             <div class="card">
                 <form method="post" action="{{ request.path }}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <ul>
                         {% for hidden_field in form.hidden_fields %}
-                        {{ hidden_field.errors }}
-                        {{ hidden_field }}
+                            {{ hidden_field.errors }}
+                            {{ hidden_field }}
                         {% endfor %}
                         {% for field in form.visible_fields %}
-                        <div class="row">
-                            <div class="input-field col s12">
-                                {{ field.errors }}
-                                {% if field.help_text %}
-                                <p>{{ field.help_text }}</p>
-                                {% endif %}
-                                {{ field }}
-                                {{ field.label_tag }}
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ field.errors }}
+                                    {% if field.help_text %}
+                                        <p>{{ field.help_text }}</p>
+                                    {% endif %}
+                                    {{ field }}
+                                    {{ field.label_tag }}
+                                </div>
                             </div>
-                        </div>
                         {% endfor %}
                     </ul>
                     {% include "dash/snippets/plugin_help_text.html" %}
+                    <div class="dynamic-form"></div>
                     <div class="row">
                         <button type="submit" class="btn blue right">{% trans "Save" %}</button>
                     </div>
                 </form>
             </div>
         </div>
+    </div>
 </div>
-</div>
+{% if plugin.name|lower == "service" %}
+    <script>
+        $(document).ready(function () {
+            $('#id_service').on('change', function () {
+                let service_id = this.value;
+                $.get("http://0.0.0.0:8000/dashboard/pin/form/" + service_id + '/', function (data) {
+                    $('.dynamic-form').html(data);
+                }).fail(function () {
+                    $('.dynamic-form').empty();
+                });
+            });
+        });
+    </script>
+{% endif %}
