--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -12,7 +12,7 @@
 {% for entry in dashboard_entries %}
     {% get_dash_plugin entry as plugin %}
 
-    <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}" data-id="{{ plugin.position }}">
+    <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}" data-id="{{ plugin.position }}" data-entry-id="{{ entry.pk }}">
         <div class="ventana-pin blue">
             <a href="{% url 'dash:dash.delete_dashboard_entry' entry.pk %}" class="remove-plugin"
                title="Eliminar pin">
