--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -14,7 +14,26 @@ Base para la interfaz en comun de todos los usuarios.
     <link rel="stylesheet" type="text/css" href="{% static "dist/css/bundle.min.css" %}">
     <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection">
     <link rel="stylesheet" type="text/css" href="{% static "fonts/iconfont/material-icons.css" %}">
-    <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{% static "img/apple-touch-icon-57x57.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "img/apple-touch-icon-114x114.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "img/apple-touch-icon-72x72.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "img/apple-touch-icon-144x144.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{% static "img/apple-touch-icon-60x60.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% static "img/apple-touch-icon-120x120.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{% static "img/apple-touch-icon-76x76.png" %}" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static "img/apple-touch-icon-152x152.png" %}" />
+    <link rel="icon" type="image/png" href="{% static "img/favicon-196x196.png" %}" sizes="196x196" />
+    <link rel="icon" type="image/png" href="{% static "img/favicon-96x96.png" %}" sizes="96x96" />
+    <link rel="icon" type="image/png" href="{% static "img/favicon-32x32.png" %}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{% static "img/favicon-16x16.png" %}" sizes="16x16" />
+    <link rel="icon" type="image/png" href="{% static "img/favicon-128.png" %}" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="{% static "img/mstile-144x144.png" %}" />
+    <meta name="msapplication-square70x70logo" content="{% static "img/mstile-70x70.png" %}" />
+    <meta name="msapplication-square150x150logo" content="{% static "img/mstile-150x150.png" %}" />
+    <meta name="msapplication-wide310x150logo" content="{% static "img/mstile-310x150.png" %}" />
+    <meta name="msapplication-square310x310logo" content="{% static "img/mstile-310x310.png" %}" />
 
     <script>
         (function (i, s, o, g, r, a, m) {
