--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -11,7 +11,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
-    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{% static "img/apple-touch-icon-57x57.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "img/apple-touch-icon-114x114.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "img/apple-touch-icon-72x72.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "img/apple-touch-icon-144x144.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{% static "img/apple-touch-icon-60x60.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% static "img/apple-touch-icon-120x120.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{% static "img/apple-touch-icon-76x76.png" %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static "img/apple-touch-icon-152x152.png" %}"/>
+    <link rel="icon" type="image/png" href="{% static "img/favicon-196x196.png" %}" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="{% static "img/favicon-96x96.png" %}" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="{% static "img/favicon-32x32.png" %}" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="{% static "img/favicon-16x16.png" %}" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="{% static "img/favicon-128.png" %}" sizes="128x128"/>
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="{% static "img/mstile-144x144.png" %}"/>
+    <meta name="msapplication-square70x70logo" content="{% static "img/mstile-70x70.png" %}"/>
+    <meta name="msapplication-square150x150logo" content="{% static "img/mstile-150x150.png" %}"/>
+    <meta name="msapplication-wide310x150logo" content="{% static "img/mstile-310x150.png" %}"/>
+    <meta name="msapplication-square310x310logo" content="{% static "img/mstile-310x310.png" %}"/>
 
     <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/login-signup.css" %}">
@@ -80,7 +99,7 @@
                 <a class="blue-text text-darken-1" href="{% url "information:privacy" %}">Política de privacidad</a>
             </div>
             <div class="col l3 s12">
-                <a class="blue-text text-darken-1" href="/blog">Blog</a>    
+                <a class="blue-text text-darken-1" href="/blog">Blog</a>
             </div>
             <div class="col l3 s12">
                 <a class="blue-text text-darken-1" href="{% url "feedback:feedback_contact" %}">Contacto</a>
