--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1639,6 +1639,7 @@ span
 
 .profile-controls > li
   display: inline
+  cursor: pointer
   margin: 10px
   -webkit-transition: all .2s ease-in-out
   transition: all .2s ease-in-out
