--- a/skyfolk/templates/support/password-contact.html
+++ b/skyfolk/templates/support/password-contact.html
@@ -15,7 +15,7 @@
         {% endif %}
         <div class="row">
             <div class="col offset-l3 col l6 m12 s12">
-                <form method="POST" action="" class="password_reset">{% csrf_token %}
+                <form method="POST" action="{% url "support:support-password" %}" class="password_reset">{% csrf_token %}
                     <div class="row">
                         {{ form.title.errors }}
                         <div class="input-field col s12">
