--- a/postman/templates/postman/inc_subject_ex.html
+++ b/postman/templates/postman/inc_subject_ex.html
@@ -18,5 +18,5 @@ With subject: "a subject of great interest for you":
 With subject: "a great interest":
 "a great interest - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed ..."
 
-{% endcomment %}{% load postman_tags %}{% with message.subject|truncatewords:5 as truncated_subject %}<b>{{ truncated_subject }}</b>
-{% with truncated_subject|wordcount as subject_wc %}{% with 12|sub:subject_wc as wc %}{% if message.body and wc > 0 %} - <span>{{ message.body|truncatewords:wc }}</span>{% endif %}{% endwith %}{% endwith %}{% endwith %}
+{% endcomment %}{% load emoji_tags %}{% load postman_tags %}{% with message.subject|truncatewords:5 as truncated_subject %}<b>{{ truncated_subject|emoji_replace }}</b>
+{% with truncated_subject|wordcount as subject_wc %}{% with 12|sub:subject_wc as wc %}{% if message.body and wc > 0 %} - <span>{{ message.body|emoji_replace|truncatewords:wc }}</span>{% endif %}{% endwith %}{% endwith %}{% endwith %}
