--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -526,3 +526,6 @@ ul#vertical-menu .userView .background
 
 .draggable-mirror
   z-index: 9999
+
+.pagination li.active
+  background-color: #1e88e5 !important
