--- a/external_services/templates/external_services/services.html
+++ b/external_services/templates/external_services/services.html
@@ -14,19 +14,23 @@
                 box-shadow: 0 1px 5px rgba(30, 136, 229, 0.3);
                 position: relative;
             }
+
             .row .service-actions {
                 border-top: 2px solid rgba(30, 136, 229, 0.3);
                 text-align: center;
                 padding: 5px;
             }
-            .row .service-actions > a{
+
+            .row .service-actions > a {
                 margin: 5px;
             }
+
             .row .service .service-thumbnail img {
                 width: 100%;
                 height: 100%;
                 object-fit: fill;
             }
+
             .row .service .service-thumbnail {
                 padding: 10px;
                 height: 70%;
@@ -35,25 +39,27 @@
             .row .service .service-description {
                 padding: 5px;
             }
+
             .row .service:hover .actions-service {
                 display: block;
-                box-shadow:
-                1px 1px #53a7ea,
+                box-shadow: 1px 1px #53a7ea,
                 2px 2px #53a7ea,
                 3px 3px #53a7ea;
                 -webkit-transform: translateX(-3px);
                 transform: translateX(-3px);
             }
+
             .row .service .actions-service {
                 border-radius: 10px;
-	            position: absolute;
-	            display: none;
+                position: absolute;
+                display: none;
                 top: 0;
                 width: 100%;
                 height: 100%;
                 background-color: rgba(0, 0, 0, 0.5);
                 cursor: pointer;
             }
+
             .row .service .actions-service i {
                 position: absolute;
                 top: 50%;
@@ -68,42 +74,67 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <div class="row">
-            <div class="col s12">
-                {% if user.is_authenticated %}
+    <div class="row">
+        <div class="col s12">
+            {% if user.is_authenticated %}
+                <div class="row">
+                {% if active_services %}
                     <div class="row">
-                        <h2 class="center">Mis servicios</h2>
-                    </div>
-                    {% if services_list %}
-                        <div class="row">
-                            <h3>Servicios activos</h3>
-                            {% for service in services_list %}
-                               <div class="col s12 m4 l2">
-                                    <div class="service tooltipped" data-position="bottom" data-tooltip="{{ service.description }}">
-                                        <div class="service-thumbnail">
-                                            <img src="{% if service.thumbnail %}{{ service.thumbnail.url }}{% else %}{% static "img/nuevo_back.jpg" %}{% endif %}"
-                                                 title="{{ service.name|safe|escape }}" alt="{{ service.name|safe|escape }}" />
-                                        </div>
-                                        <div class="service-description">
-                                            <p class="center flow-text">
-                                                <b>{{ service.name|safe|escape }}</b>
-                                                <span>- {{ service.description }}</span>
-                                            </p>
-                                        </div>
-                                    <div class="service-actions">
-                                        <a class="btn blue white-text" href="{{ service.name|get_auth_url_given_service_name }}" title="Conectar con {{ service.name|safe|escape }}">Conectar {{ service.name|safe|escape }}</a>
+                        <h3>Mis servicios activos</h3>
+                        {% for service in active_services %}
+                            <div class="col s12 m4 l2">
+                                <div class="service tooltipped" data-position="bottom"
+                                     data-tooltip="{{ service.service.description }}">
+                                    <div class="service-thumbnail">
+                                        <img src="{% if service.thumbnail %}{{ service.thumbnail.url }}{% else %}{% static "img/nuevo_back.jpg" %}{% endif %}"
+                                             title="{{ service.service.name|safe|escape }}"
+                                             alt="{{ service.service.name|safe|escape }}"/>
                                     </div>
+                                    <div class="service-description">
+                                        <p class="center flow-text">
+                                            <b>{{ service.service.name|safe|escape }}</b>
+                                            <span>- {{ service.service.description }}</span>
+                                        </p>
+                                    </div>
+                                    <div class="service-actions">
+                                        <a class="btn red white-text delete-service"
+                                           href="{% url "external_services:delete-user-service" service.id %}"
+                                           title="Eliminar {{ service.service.name|safe|escape }}">Eliminar {{ service.service.name|safe|escape }}</a>
                                     </div>
                                 </div>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        <div class="row center">
-                            <p class="flow-text">Actualmente no tienes ningún servicio activo.</p>
-                        </div>
-                    {% endif %}
-                    <div class="divider"></div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    <div class="row center">
+                        <p class="flow-text">Actualmente no tienes ningún servicio activo.</p>
+                    </div>
                 {% endif %}
+                <div class="divider"></div>
+                {% for service in services_list %}
+                    <div class="col s12 m4 l2">
+                        <div class="service tooltipped" data-position="bottom"
+                             data-tooltip="{{ service.description }}">
+                            <div class="service-thumbnail">
+                                <img src="{% if service.thumbnail %}{{ service.thumbnail.url }}{% else %}{% static "img/nuevo_back.jpg" %}{% endif %}"
+                                     title="{{ service.name|safe|escape }}"
+                                     alt="{{ service.name|safe|escape }}"/>
+                            </div>
+                            <div class="service-description">
+                                <p class="center flow-text">
+                                    <b>{{ service.name|safe|escape }}</b>
+                                    <span>- {{ service.description }}</span>
+                                </p>
+                            </div>
+                            <div class="service-actions">
+                                <a class="btn blue white-text"
+                                   href="{{ service.name|get_auth_url_given_service_name }}"
+                                   title="Conectar con {{ service.name|safe|escape }}">Conectar {{ service.name|safe|escape }}</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
             </div>
         </div>
     </div>
@@ -112,5 +143,18 @@
             $('.tooltipped').tooltip({delay: 50});
         });
 
+        $('.delete-service').on('click', function (e) {
+            e.preventDefault();
+            let removeURL = $(this).attr('href');
+            $.ajax({
+                url: removeURL,
+                type: 'POST',
+                success: function (result) {
+                   if (result.delete === 'yes') {
+                       location.reload();
+                   }
+                }
+            });
+        });
     </script>
 {% endblock %}
