--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -281,8 +281,7 @@ body > .container {
   -moz-transition: all 0.1s linear;
   transition: all 0.1s linear; }
   .nav-vertical-and-chat li a, .nav-vertical-and-chat li a:visited {
-    color: #1e88e5;
-    text-decoration: none;
+    color: inherit;
     padding: 0;
     display: inline-block;
     height: 0;
