--- a/dash/contrib/plugins/service/templates/service/base_result.html
+++ b/dash/contrib/plugins/service/templates/service/base_result.html
@@ -1,21 +1,8 @@
 {% load humanize %}
-{% for result in results %}
-     <div class="row">
-    <div class="col s12">
-      <div class="card white">
-        <div class="card-content black-text">
-          <div class="row">
-            <p>{{ result.fullText }}</p>
-            <b>{{ result.createAt }}</b>
-          </div>
-          <div class="row">
-            <a class="btn blue right" href="https://twitter.com/{{ result.userAccount }}/">@{{ result.userAccount }}</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-{% endfor %}
+
+{% block rendered_results %}
+{% endblock %}
+
 {% if results.has_other_pages %}
   <ul class="pagination">
     {% if results.has_previous %}
