--- a/dash/contrib/plugins/service/templates/service/instagram/service_result.html
+++ b/dash/contrib/plugins/service/templates/service/instagram/service_result.html
@@ -1,24 +1,31 @@
 {% extends "service/base_result.html" %}
+{% load dash_tags %}
+
 {% block rendered_results %}
-    {% for result in results %}
-        <div class="row">
-            <div class="col s12">
-                <div class="card white">
-                    <div class="card-content black-text">
-                        <div class="row">
-                            <img src="{{ result.profile_picture }}" class="responsive-img"
-                                 alt="Imagen de perfil de {{ result.username }}"
-                                 title="Imagen de perfil de {{ result.username }}" width="140" height="140"/>
-                            <p>{{ result.full_name }}</p>
-                            <b>{{ result.website }}</b>
-                        </div>
-                        <div class="row">
-                            <a class="btn blue right"
-                               href="https://instagram.com/{{ result.username }}/">@{{ result.username }}</a>
-                        </div>
-                    </div>
+{% for result in results %}
+<div class="row">
+    <div class="col s12">
+        <div class="card white">
+            <div class="card-content black-text">
+                <div class="row">
+                    <a href="{{ result.link }}">
+                        <img src="{{ result.images.low_resolution.url }}" class="responsive-img"
+                             alt="Imagen de perfil de {{ result.user.username }}"
+                             title="Imagen de perfil de {{ result.user.username }}" width="{{ result.images.low_resolution.width }}" height="{{ result.images.low_resolution.height }}"/>
+                    </a>
+                    <p>{{ result.full_name }}</p>
+                    <b>{{ result.website }}</b>
+                </div>
+                <div class="row">
+                    <a class="btn blue right"
+                       href="https://instagram.com/{{ result.user.username }}/">@{{ result.user.username }}</a>
+                </div>
+                <div class="row right">
+                    <p>{{ result.created_time|parse_timestamp }}</p>
                 </div>
             </div>
         </div>
-    {% endfor %}
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
