--- a/dash/templates/dash/add_dashboard_widget_ajax.html
+++ b/dash/templates/dash/add_dashboard_widget_ajax.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 </div>
-{% if plugin.name|lower == "service" %}
+{% if plugin.uid|get_plugin_uid_without_col_and_row == "service" %}
     <script>
         $(document).ready(function () {
             $('#id_service').on('change', function () {
