--- a/dash/templates/dash/edit_dashboard_widget_ajax.html
+++ b/dash/templates/dash/edit_dashboard_widget_ajax.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n dash_tags %}
 <div class="container">
     <div class="row">
         <div class="col l4 s12 offset-l4">
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-{% if plugin.name|lower == "service" %}
+{% if plugin.uid|get_plugin_uid_without_col_and_row == "service" %}
     <script>
         $(document).ready(function () {
             $('#id_service').on('change', function () {
